--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Menu-Project-LeowKeanTat-Kaz",
+  "name": "menu-project-leowkeantat-kaz",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
