--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "menu-project-leowkeantat-kaz",
+  "name": "menu-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
